# timeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  PYTHON_ARCHITECTURE_REVIEW.md  README.md  TEST_PLAN.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 063b9eee42d4_add_oauth_provider_tables_and_email_.py  0808a66fe6bf_add_missing_timestamp_defaults_to_oauth_.py  086f991ff6d7_refactor_models_to_use_mixins_system.py  1290abddbdc0_add_token_health_monitoring_to_email_.py  68c22898a728_add_server_defaults_to_email_account_.py  6cb0887d08e6_initial_schema_tenants_subjects_events_.py  703d6dc32355_add_event_schema_versioning_support.py  789b7fad5023_add_updated_at_to_subject.py  934461a1e264_add_event_schema_table.py  9e1aedfa0671_add_rbac_tables.py  af94184cd599_change_email_uniqueness_to_tenant_scoped.py  ba0e2857597d_add_email_account_table_for_integration_.py  e469986dce88_add_workflow_tables.py  e86ff0b3330d_add_user_table.py  f61af9c8e951_rename_schema_json_to_schema_definition.py
api/: auth.py  deps.py  documents.py  email_accounts.py  event_schemas.py  events.py  gmail_oauth.py  oauth_providers.py  permissions.py  roles.py  subjects.py  tenants.py  user_roles.py  users.py  workflows.py
core/: auth.py  config.py  database.py  enums.py  exceptions.py  logging.py  protocols.py  rate_limit.py  storage_protocols.py  telemetry.py
docs/: ARCHITECTURE_GUIDE.md  BACKGROUND_EMAIL_SYNC.md  EMAIL_INTEGRATION_DESIGN.md  EMAIL_INTEGRATION_IMPLEMENTATION.md  GMAIL_OAUTH_ARCHITECTURE.md  GMAIL_OAUTH_COMPLETE_GUIDE.md  GMAIL_OAUTH_SETUP.md  Technical_Specification.md  UNIVERSAL_EMAIL_DESIGN.md  email_oauth_setup_guide.md  gmail_oauth_best_practices.md  progress-report.md  timeline.md
domain/: __init__.py  entities.py  value_objects.py
integrations/: __init__.py
integrations/email/: __init__.py  encryption.py  envelope_encryption.py  factory.py  oauth_drivers.py  oauth_manager.py  protocols.py  sync.py
integrations/email/providers/: __init__.py  gmail_provider.py  imap_provider.py  outlook_provider.py
middleware/: correlation.py  security.py
models/: __init__.py  document.py  email_account.py  event.py  event_schema.py  mixins.py  oauth_provider_config.py  permission.py  persmission.py  role.py  subject.py  tenant.py  user.py  workflow.py
repositories/: base.py  document_repo.py  event_repo.py  event_schema_repo.py  oauth_provider_config_repo.py  permission_repo.py  role_repo.py  subject_repo.py  tenant_repo.py  user_repo.py  workflow_repo.py
schemas/: document.py  email_account.py  event.py  event_schema.py  role.py  storage.py  subject.py  tenant.py  token.py  user.py  validators.py  verification.py  workflow.py
scripts/: create_test_user.py  diagnose_email_account.py  gmail_oauth_helper.py  oauth_setup_wizard.py  reset_password.py  seed_rbac.py
services/: authz_service.py  cache_service.py  document_service.py  event_service.py  hash_service.py  tenant_initialization_service.py  verification_service.py  workflow_engine.py
services/storage/: __init__.py  factory.py  local_storage.py  s3_storage.py
src/: main.py
src/application/: __init__.py
src/application/interfaces/: __init__.py  repositories.py  services.py  storage.py
src/application/services/: __init__.py  authorization_service.py  hash_service.py  system_audit_schema.py  system_audit_service.py  tenant_creation_service.py  tenant_initialization_service.py  verification_service.py
src/application/use_cases/: __init__.py
src/application/use_cases/documents/: document_operations.py
src/application/use_cases/events/: create_event.py
src/application/use_cases/workflows/: workflow_engine.py
src/domain/: __init__.py  enums.py  exceptions.py
src/domain/entities/: __init__.py  event.py  event_schema.py  subject.py  tenant.py
src/domain/value_objects/: __init__.py  core.py
src/infrastructure/: exceptions.py
src/infrastructure/cache/: redis_cache.py
src/infrastructure/config/: settings.py
src/infrastructure/messaging/: redis_pubsub.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/migrations/: env.py
src/infrastructure/persistence/models/: __init__.py  document.py  email_account.py  event.py  event_schema.py  mixins.py  oauth_provider_config.py  permission.py  role.py  subject.py  tenant.py  user.py  workflow.py
src/infrastructure/persistence/repositories/: __init__.py  auditable_repo.py  base.py  document_repo.py  event_repo.py  event_schema_repo.py  oauth_provider_config_repo.py  permission_repo.py  (+5 more)
src/infrastructure/security/: __init__.py  jwt.py  password.py
src/presentation/api/: dependencies.py
src/presentation/middleware/: __init__.py  correlation.py  rate_limit.py  security.py  timeout.py
src/shared/: context.py  enums.py
src/shared/telemetry/: logging.py  telemetry.py  tracing.py
src/shared/utils/: __init__.py  datetime.py  generators.py  sanitization.py
tests/: conftest.py
tests/api/: test_health.py
tests/application/services/: test_hash_service.py  test_verification_service.py
tests/infrastructure/cache/: test_cache_service.py
tests/integration/: test_email_sync.py
tests/repositories/: test_event_repo.py
tests/services/: test_cache_service.py  test_hash_service.py  test_local_storage.py  test_s3_storage.py  test_verification_service.py
utils/: generators.py  tracing.py
(+47 files in other folders)
