[project]
name = "timeline"
version = "1.0.0"
description = "Event sourcing platform with cryptographic integrity"
authors = [
    {name = "Timeline Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",

    # Settings & Configuration
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.4.0",
    "python-dotenv>=1.0.0",

    # Validation
    "jsonschema>=4.20.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "cryptography>=41.0.0",
    "slowapi>=0.1.9",

    # Caching
    "redis>=5.0.1",

    # ID Generation
    "cuid2>=2.0.1",

    # Cloud Storage (S3)
    "boto3>=1.29.7",
    "aioboto3>=12.0.0",

    # Async File I/O
    "aiofiles>=23.2.1",

    # Email Integration
    "aiosmtplib>=3.0.1",
    "aioimaplib>=1.0.1",
    "google-auth>=2.25.0",
    "google-api-python-client>=2.110.0",
    "msal>=1.25.0",
    "authlib>=1.6.5",

    # Background Jobs
    "celery>=5.3.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.2",

    # Code Quality
    "black>=23.12.0",
    "ruff>=0.1.9",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "types-redis",
    "types-python-jose",

    # Security
    "bandit[toml]>=1.7.6",

    # Pre-commit
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api",
    "core",
    "domain",
    "integrations",
    "middleware",
    "models",
    "repositories",
    "schemas",
    "services",
    "utils",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | alembic/versions
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
    "slow: Slow running tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "alembic/versions"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls
