[project]
name = "timeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aioimaplib>=2.0.1",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "bcrypt>=5.0.0",
    "boto3>=1.42.19",
    "celery>=5.6.1",
    "cryptography>=46.0.3",
    "cuid2>=2.0.1",
    "fastapi[standard]>=0.128.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "jsonschema>=4.25.1",
    "msal>=1.34.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-jaeger>=1.11.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-redis>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
]
